@@ -2,6 +2,7 @@ fakechroot (2.6-1) unstable; urgency=low
 
   * New environment variable FAKECHROOT_EXCLUDE_PATH.
   * Fix getcwd(3) function. Closes: #410145.
+  * Fix readlink(2) function. Closes: #412141.
   * Updated manpage.
 
  -- Piotr Roszatycki <dexter@dandelion>  Fri,  4 May 2007 19:41:47 +0200
